--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.liqi.wuziqi"
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    //testCompile 'junit:junit:4.12'
+    //compile 'com.android.support:appcompat-v7:23.2.1'
+    compile project(':appcompat')
 }
